@@ -20,6 +20,7 @@ CHANGELOG
 * Add POIs on trek GPX (fixes #774)
 * Allow to override the Trek public document template
   (see *advanced configuration* in docs)
+* Rename recurrent field to subcontracting on intervention (fixes #911)
 
 
 0.23.1 (2014-05-22)
